<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    android:orientation="vertical"
    android:gravity="center">

    <!-- Title Text -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finance_savings"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:layout_marginBottom="24dp" />

    <!-- Email Field -->
    <EditText
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:id="@+id/emailEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/e_mail"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="10dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-medium"
        />

    <!-- Password Field -->
    <EditText
        android:autofillHints="password"
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-medium"
        />

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:textColor="#222222"
        android:background="@drawable/login_button_background"
        android:layout_marginBottom="24dp"
        android:textStyle="bold"
        />

    <!-- Sign Up Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_yet"
        android:textColor="#AAAAAA"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/signUpText"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:text="@string/sign_up"
        android:gravity="center"
        android:textColor="#2FB6FF"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:background="@null"
        />

</LinearLayout>